added repository and auth services

--- a/UserTestingAPI/UserTestingAPI/appsettings.Development.json
+++ b/UserTestingAPI/UserTestingAPI/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "DefaultConnection": "User ID=postgres;Password=postgres;Server=postgres;Port=5432;Database=userTesting;Host=usertestingDb;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
