--- a/UserTestingAPI/UserTestingAPI/appsettings.json
+++ b/UserTestingAPI/UserTestingAPI/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DefaultConnection": "User ID=postgres_vacancies;Password=postgres;Server=postgres;Port=5432;Database=VacanciesDb;Host=vacancies-postgres;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
