--- a/UserTestingAPI/docker-compose.yml
+++ b/UserTestingAPI/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       context: .
       dockerfile: UserTestingAPI/Dockerfile
     depends_on: usertestingDb
+    ports:
+      - "5000:80"
     networks: 
       - userTesting
   usertestingDb:
@@ -18,7 +20,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: usertesting
+      POSTGRES_DB: userTesting
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     networks:
