added db entities, seed data, service implementm controllers, dtos, unit tests

--- a/UserTestingAPI/UserTestingAPI/appsettings.Development.json
+++ b/UserTestingAPI/UserTestingAPI/appsettings.Development.json
@@ -1,9 +1,18 @@
 {
-  "DefaultConnection": "User ID=postgres;Password=postgres;Server=postgres;Port=5432;Database=userTesting;Host=usertestingDb;",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres-user;Password=postgres;Server=postgres;Port=5432;Database=userTesting;Host=usertesting-db",
+//    "DefaultConnection": "User ID=postgres-user;Password=postgres;Server=postgres;Port=5431;Database=userTesting;Host=localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "F4XCU4J99BFRRK1OHHS4WMG3ZHHBV4Y7RFY9E3QD",
+    "Issuer": "http://localhost:5000/",
+    "Audience": "http://localhost:5000/",
+    "RefreshTokenKey" : "F4XCU4J99BFRRK1OHHS4WMG3ZHHBV4Y7RFY9E3QDASDGHDASPSY"
   }
 }
