--- a/UserTestingAPI/UserTestingAPI/appsettings.json
+++ b/UserTestingAPI/UserTestingAPI/appsettings.json
@@ -1,10 +1,18 @@
 {
-  "DefaultConnection": "User ID=postgres_vacancies;Password=postgres;Server=postgres;Port=5432;Database=VacanciesDb;Host=vacancies-postgres;",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres-user;Password=postgres;Server=postgres;Port=5432;Database=userTesting;Host=usertesting-db",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "F4XCU4J99BFRRK1OHHS4WMG3ZHHBV4Y7RFY9E3QD",
+    "Issuer": "http://localhost:5000/",
+    "Audience": "http://localhost:5000/",
+    "RefreshTokenKey" : "F4XCU4J99BFRRK1OHHS4WMG3ZHHBV4Y7RFY9E3QDASDGHDASPSY"
+  }
 }
