--- a/UserTestingAPI/docker-compose.yml
+++ b/UserTestingAPI/docker-compose.yml
@@ -8,12 +8,14 @@ services:
     build:
       context: .
       dockerfile: UserTestingAPI/Dockerfile
-    depends_on: 
-      - usertesting-db
+    depends_on:
+      usertesting-db:
+        condition: service_healthy
     ports:
       - "5000:80"
     networks: 
       - userTesting
+    restart: always
       
   usertesting-db:
     image: postgres:15.0
@@ -28,3 +30,8 @@ services:
       - ./postgres-data:/var/lib/postgresql/data
     networks:
       - userTesting
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres-user -d userTesting" ]
+      interval: 10s
+      timeout: 3s
+      retries: 3
